prints more readable

--- a/puzzle_day8.ipynb
+++ b/puzzle_day8.ipynb
@@ -17,7 +17,7 @@
     "# read the file\n",
     "file = open(\"puzzle_input/puzzle_8.txt\")\n",
     "input = file.read().split(\"\\n\\n\")\n",
-    "print(input)"
+    "print(input[0:3])"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "source": [
     "# extract directions from input\n",
     "directions = input[0]\n",
-    "directions"
+    "directions[0:3]"
    ]
   },
   {
@@ -814,7 +814,7 @@
    "source": [
     "# extract network from input\n",
     "network = input[1].splitlines()\n",
-    "network"
+    "network[0:3]"
    ]
   },
   {
@@ -1595,7 +1595,7 @@
     "    name, l, r = node\n",
     "    dict_network.update({name: (l,r)}) \n",
     "\n",
-    "dict_network"
+    "dict_network[0:3]"
    ]
   },
   {
