--- a/puzzle_day5.ipynb
+++ b/puzzle_day5.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "see\n"
+      "['seeds: 4239267129 20461805 2775736218 52390530 3109225152 741325372 1633502651 46906638 967445712 47092469 2354891449 237152885 2169258488 111184803 2614747853 123738802 620098496 291114156 2072253071 28111202', '', 'seed-to-soil map:', '803774611 641364296 1132421037', '248421506 1797371961 494535345']\n"
      ]
     }
    ],
    "source": [
     "file = open(\"puzzle_input/puzzle_5.txt\")\n",
     "input = file.read()\n",
-    "print(input[0:3])"
+    "print(input.splitlines()[0:5])"
    ]
   },
   {
